Big update for **Bonk Leagues Skin Manager!** (v3.0):* - Skin sharing is now **A LOT** easier, no more long skin codes, but instead simple to send links that people can click to add your skin. (on the new Share page) - You can also now get nice-looking images with skin details as well as an image of the skin that you can send to people (on the new Share page) - Click on the previews on the editing skin page or the adding skin page to see a full-size high-resolution preview of the skin. - Some bug fixes and CSS styling fixes.* https://i.imgur.com/Wwkqe5V.png

--- a/static/style.css
+++ b/static/style.css
@@ -132,6 +132,7 @@ ul li{
     box-shadow:5px 5px 0px 0px #00182e;
     cursor:pointer;
     margin-right:10px;
+    margin-bottom:10px;
 }
 .homethumb:hover{
     transform: scale(1.02);
