--- a/static/skinstyle.css
+++ b/static/skinstyle.css
@@ -153,7 +153,7 @@ input[type=text],input[type=password]{
     margin-bottom:20px;
     border:0px;
 }
-#loggedin, #addskin, #addskin2, #editskin, #smpskins{
+#loggedin, #addskin, #addskin2, #editskin, #smpskins, #shareskin, #shared{
     display:none;
 }
 .skinslot{
@@ -175,7 +175,7 @@ input[type=text],input[type=password]{
     vertical-align:middle;
     margin-right:20px;
 }
-.skinchoice{
+.choice{
     width:600px;
     text-align:left;
     margin:0 auto;
@@ -186,24 +186,25 @@ input[type=text],input[type=password]{
     margin-top:-1px;
     cursor:pointer;
 }
-.skinchoice div{
+.choice div{
     display:inline-block;
     vertical-align:middle;
+    width:500px;
 }
-.skinchoice img{
+.choice img{
     display:inline-block;
     margin-right:5px;
     margin-left:15px;
     vertical-align:middle;
 }
-.skinchoice:hover,.sampleskin:hover{
+.choice:hover,.sampleskin:hover{
     background:#141414;
 }
 .sknframe{
     border:2px solid #fb016e;
     width:100px;
     height:100px;
-    border-radius:360px;
+    border-radius:9999px;
     box-shadow:5px 5px 0px 0px #b30050;
 }
 .sampleskin{
@@ -224,6 +225,7 @@ input[type=text],input[type=password]{
     cursor:not-allowed;
     box-shadow:none;
     background:#b30050;
+    animation:none !important;
 }
 #canvas{
     border-radius:360px;
@@ -256,4 +258,57 @@ input[type=text],input[type=password]{
 .moredd a:hover{
     background-color: #013e79;
     color:#fb016e;
+}
+.sknframebig{
+    display:none;
+    position:fixed;
+    top:50%;
+    left:50%;
+    height:90%;
+    width:auto;
+    transform:translate(-50%,-50%);
+    cursor:pointer;
+    z-index:99;
+    border:0;
+    box-shadow:none;
+}
+#sknframe,#sknframe2{
+    cursor:pointer;
+}
+#overlay{
+    background:#2c3e50;
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    display:none;
+    cursor:pointer;
+}
+#promo{
+    margin:0 auto;
+    width:468px;
+    height:60px;
+    margin-top:50px;
+    box-shadow:5px 5px 0px 0px #b30050;
+    border:3px solid #fb016e;
+    text-align:left;
+}
+#promo span{
+    position:absolute;
+    width:460px;
+    color:#fb016e;
+    font-weight:bold;
+    font-size:15px;
+    text-align:center;
+    padding:3px;
+    overflow:none;
+    z-index:-999;
+}
+#promo div{
+    background:#fff;
+}
+hr{
+    border:1px solid #222;
+    width:50%;
 }
