--- a/static/style.css
+++ b/static/style.css
@@ -26,6 +26,17 @@ header h1{
     vertical-align:middle;
     margin-bottom:30px;
 }
+@media screen and (max-width: 480px) {
+    header h1 {
+        display:none;
+    }
+    header img{
+        margin-bottom:10px;
+    }
+    #more{
+        display:none !important;
+    }
+}
 #defaulta{
     color:inherit;
     text-decoration:none;
@@ -133,6 +144,7 @@ ul li{
     cursor:pointer;
     margin-right:10px;
     margin-bottom:10px;
+    max-width:350px;
 }
 .homethumb:hover{
     transform: scale(1.02);
@@ -142,7 +154,7 @@ ul li{
     border:2px solid #fb016e;
     color: #fb016e;
     padding:30px;
-    width:400px;
+    max-width:400px;
     margin-bottom:10px;
     display:inline-block;
     box-shadow:3px 3px 0px 0px #b30050;
