Done a few "Quick fixes", titles fixed, restructured a couple things, fixed some css.

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -1,4 +1,4 @@
-            <br/><hr/><br/>
+            <br/>{% if page.sel != 'skins' %}<hr/><br/>{% endif %}
 
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <!-- Bonk (Money Grab) Leagues -->
@@ -20,6 +20,6 @@
         <script src="static/js/md5.js"></script>
         <script src="static/js/skineditor.js#20"></script>
         {% endif %}
-        <script src="static/js/{{ page.scriptToUse }}.js#20"></script>
+        <script src="static/js/{{ page.scriptToUse }}.js#21"></script>
     </body>
 </html>
