--- a/_includes/top.html
+++ b/_includes/top.html
@@ -18,6 +18,9 @@
         <link rel="icon" type="image/png" href="static/img/logo.png">
         <link rel='stylesheet' type='text/css' href='static/css/{{ page.styleToUse }}.css#20'>
 
+        <meta name="google-site-verification" content="FEijvMGwCNkxbshW2jR9aTTYvpJFDkejSXJRR7cPfpQ" />
+        <meta name="msvalidate.01" content="D8571762A86E4870190A09991372AD65" />
+
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112446948-1"></script>
         <script>
@@ -32,7 +35,7 @@
         <header>
             <a href="index.html" id="defaulta">
                 <img src="static/img/logo.png" id="logo" draggable="false">
-                <h1>{{ page.title }}<span id="typing">_</span>{% if page.sel == 'skins' %}<span style="font-size:18px;vertical-align:top">v3.1</span>{% endif %}</h1>
+                <h1>{{ page.shorttitle }}<span id="typing">_</span>{% if page.sel == 'skins' %}<span style="font-size:18px;vertical-align:top">v3.1</span>{% endif %}</h1>
             </a>
             <br/>
             <nav>
