--- a/static/css/style.css
+++ b/static/css/style.css
@@ -238,3 +238,10 @@ select:focus{
     box-shadow:5px 5px 0px 0px #b30050;
     border:3px solid #fb016e;
 }
+#e404{
+    color:#111;
+    font-size:200px;
+    font-family:'VT323', monospace;
+    text-shadow: 0px 0px 15px rgba(251, 1, 110, 1);
+    
+}
