oops, quickly need to fix some links, should be good now

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -15,11 +15,11 @@
             <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#2180</span></span>      
         </section>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-        <script src="static/js/bab.js"></script>
+        <script src="/static/js/bab.js"></script>
         {% if page.sel == 'skins' %}
-        <script src="static/js/md5.js"></script>
-        <script src="static/js/skineditor.js#20"></script>
+        <script src="/static/js/md5.js"></script>
+        <script src="/static/js/skineditor.js#20"></script>
         {% endif %}
-        <script src="static/js/{{ page.scriptToUse }}.js#21"></script>
+        <script src="/static/js/{{ page.scriptToUse }}.js#21"></script>
     </body>
 </html>
