--- a/_includes/top.html
+++ b/_includes/top.html
@@ -15,8 +15,8 @@
         <meta property="og:image" content="https://bonkleagues.github.io/static/img/logo.png" />
         <meta name="theme-color" content="#013e79">
 
-        <link rel="icon" type="image/png" href="static/img/logo.png">
-        <link rel='stylesheet' type='text/css' href='static/css/{{ page.styleToUse }}.css#21'>
+        <link rel="icon" type="image/png" href="/static/img/logo.png">
+        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#21'>
 
         <meta name="google-site-verification" content="FEijvMGwCNkxbshW2jR9aTTYvpJFDkejSXJRR7cPfpQ" />
         <meta name="msvalidate.01" content="D8571762A86E4870190A09991372AD65" />
@@ -33,16 +33,16 @@
     </head>
     <body>
         <header>
-            <a href="index.html" id="defaulta">
-                <img src="static/img/logo.png" id="logo" draggable="false">
+            <a href="/" id="defaulta">
+                <img src="/static/img/logo.png" id="logo" draggable="false">
                 <h1>{{ page.shorttitle }}<span id="typing">_</span>{% if page.sel == 'skins' %}<span style="font-size:18px;vertical-align:top">v3.1</span>{% endif %}</h1>
             </a>
             <br/>
             <nav>
-                <a{% if page.sel == 'home' %} class="sel"{% endif %} href="index.html">Home</a>
-                <a{% if page.sel == 'client' %} class="sel"{% endif %} href="client.html">Client</a>
-                <a{% if page.sel == 'skins' %} class="sel"{% endif %} href="skins.html">Skin Manager</a>
-                <span id="more">More &#9660;<div class="moredd"><a href="quickplay.html">Quick Play Map Checker</a></div></span>
+                <a{% if page.sel == 'home' %} class="sel"{% endif %} href="/index.html">Home</a>
+                <a{% if page.sel == 'client' %} class="sel"{% endif %} href="/client.html">Client</a>
+                <a{% if page.sel == 'skins' %} class="sel"{% endif %} href="/skins.html">Skin Manager</a>
+                <span id="more">More &#9660;<div class="moredd"><a href="/quickplay.html">Quick Play Map Checker</a></div></span>
                 <!--
                 <a href="https://discord.gg/A5zpj2a" target="_blank">Discord</a>
                 -->
