A whole lot of bug fixes, quick play map checker now loads a lot faster, and possible fix for issue #3 (please test)

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="#013e79">
 
         <link rel="icon" type="image/png" href="/static/img/logo.png">
-        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#21'>
+        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#22'>
 
         <meta name="google-site-verification" content="FEijvMGwCNkxbshW2jR9aTTYvpJFDkejSXJRR7cPfpQ" />
         <meta name="msvalidate.01" content="D8571762A86E4870190A09991372AD65" />
@@ -29,6 +29,19 @@
             gtag('js', new Date());
 
             gtag('config', 'UA-112446948-1');
+        </script>
+
+        <!-- more metadata -->
+        <script type="application/ld+json">
+            {
+                "@context": "http://schema.org",
+                "@type": "Organization",
+                "url": "https://bonkleagues.github.io",
+                "logo": "https://bonkleagues.github.io/static/img/logo.png",
+                "name": "Bonk Leagues",
+                "image": "https://bonkleagues.github.io/static/img/logo.png",
+                "description": "Bonk Leagues is a custom client, skin editor and more for http://bonk.io/"
+            }
         </script>
     </head>
     <body>
