--- a/static/css/style.css
+++ b/static/css/style.css
@@ -243,5 +243,17 @@ select:focus{
     font-size:200px;
     font-family:'VT323', monospace;
     text-shadow: 0px 0px 15px rgba(251, 1, 110, 1);
-    
+}
+::-webkit-scrollbar-button, ::-webkit-scrollbar-track{
+    display:none;
+}
+::-webkit-scrollbar-thumb{
+    background-color:#fb016e;
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color:#b30050;
+}
+::-webkit-scrollbar{
+    width:7px;
+    overflow:overlay;
 }
