**Bonk Leagues Update!** - Added an 'XP Checker' tool to Bonk Leagues! Find it at: https://bonkleagues.github.io/xpchecker.html. Also, fixed some bugs and stuff. *Please tell me if you encounter any bugs with the new XP Checker!*

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -16,10 +16,11 @@
         </section>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="/static/js/bab.js"></script>
+        <script src="/static/js/blockdetect.js"></script>
         {% if page.sel == 'skins' %}
         <script src="/static/js/md5.js"></script>
         <script src="/static/js/skineditor.js#20"></script>
         {% endif %}
-        <script src="/static/js/{{ page.scriptToUse }}.js#22"></script>
+        <script src="/static/js/{{ page.scriptToUse }}.js#23"></script>
     </body>
 </html>
