**Big Bonk Leagues update out now!** - ``` - Our Discord server is finally out! Visit our website to join it (you know the URL!). < - Skin Manager bug fixes, mainly fixed the share images having problems. - New Sample Skins, from Nix812 and me (may have missed some though, please DM me if I did). - Other general bug fixes and style fixes. ```

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -12,15 +12,47 @@
             </script>
             <div id="adbnote">It looks like you have an ad-blocker on.<br/><br/><b>To help support the development of Bonk Leagues and the Skin Manager, we'd like it if you would disable it &lt;3.</b></div>
 
-            <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#2180</span></span>      
+            <div class="remodal" data-remodal-id="modal">
+                <button data-remodal-action="close" class="remodal-close"></button>
+                <h1 class="parthead">Join our Discord server!</h1>
+                <p>We have now opened our official Bonk Leagues Discord server!</p>
+                <p>Join for Bonk Leagues support, chat, suggestions and everything Bonk.</p>
+                <br/>
+                <button data-remodal-action="confirm" onclick="window.open('https://discord.gg/RadQ7xx', '_blank');" class="remodal-confirm button">Join!</button>
+                <button data-remodal-action="close" class="remodal-cancel button">No thanks</button>
+                <br/><br/>
+                <a style="text-decoration:underline;cursor:pointer;" data-remodal-action="cancel" id="cusa">Don't show me this again</a>
+            </div>
+
+            <span style="position:fixed;bottom:15px;right:15px;font-size:16px;z-index:998;">website by Finbae<span style="font-size:11px;color:#666;">#2180</span></span>   
         </section>
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="/static/js/bab.js"></script>
         <script src="/static/js/blockdetect.js"></script>
         {% if page.sel == 'skins' %}
+        <script src="/static/js/jquery-ui.min.js"></script>
         <script src="/static/js/md5.js"></script>
         <script src="/static/js/skineditor.js#20"></script>
         {% endif %}
-        <script src="/static/js/{{ page.scriptToUse }}.js#23"></script>
+        <script src="/static/js/{{ page.scriptToUse }}.js#24"></script>
+        <script src="/static/js/remodal.js"></script>
+        <script>
+            setTimeout(function(){
+                if(!getCookie('mdis')){
+                    var inst = $('[data-remodal-id=modal]').remodal({hashTracking:false});
+                    inst.open();
+                }
+            },6500);
+            $(document).on('confirmation', '.remodal', function () {
+                document.cookie = "mdis=true; expires=Fri, 31 Dec 9999 23:59:59 GMT";
+            });
+            $(document).on('cancellation', '.remodal', function () {
+                document.cookie = "mdis=true; expires=Fri, 31 Dec 9999 23:59:59 GMT";
+            });
+            window.getCookie = function(name) {
+                match = document.cookie.match(new RegExp(name + '=([^;]+)'));
+                if (match) return match[1];
+            }
+        </script>
     </body>
 </html>
