**New Bonk Leagues update out (for the Quick Play Map Checker mainly): ``` - The Quick Play Map Checker now has a new "Stats" feature, which allows you to check special QP leaderboards, see overall average and total stats, and also see the estimated percentage of copied maps in quick play. (spoiler alert: it's kind of depressing). - The Quick Play Map Checker has also overall been revamped a bit to make it neater and noicer. - New Sample Skin added, from Shyguymask. - Small CSS fixes, including an all new highlighting colour effect. - Small SEO fixes that no one probably cares about /shrug. ``` *Links to updated stuff: <https://bonkleagues.github.io/quickplay.html>*

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="#013e79">
 
         <link rel="icon" type="image/png" href="/static/img/logo.png">
-        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#25'>
+        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#26'>
 
         {% if page.sel == 'skins' %}
         <link rel='stylesheet' type='text/css' href='/static/css/jquery-ui.min.css'>
@@ -48,7 +48,7 @@
                 "logo": "https://bonkleagues.github.io/static/img/logo.png",
                 "name": "Bonk Leagues",
                 "image": "https://bonkleagues.github.io/static/img/logo.png",
-                "description": "Bonk Leagues is a custom client, skin editor and more for http://bonk.io/"
+                "description": "Bonk Leagues - the best tools for bonk.io, featuring a skin manager, XP checker and more for http://bonk.io/"
             }
         </script>
     </head>
@@ -67,8 +67,8 @@
                 <a{% if page.sel == 'skins' %} class="sel"{% endif %} href="/skins.html">Skin Manager</a>
                 <span id="more">More &#9660;
                     <div class="moredd">
+                        <a href="/xpchecker.html">XP Checker</a><br/>
                         <a href="/quickplay.html">Quick Play Map Checker</a>
-                        <a href="/xpchecker.html">XP Checker</a>
                     </div>
                 </span>
                 <a href="https://discord.gg/RadQ7xx" id="discordlink" target="_blank"><i class="fab fa-discord"></i></a>
