updated server status checker, more info provided, also added it to navigation and did some other minor stuff https://i.imgur.com/cqU2Hoy.png

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -69,6 +69,7 @@
                     <div class="moredd">
                         <a href="/xpchecker.html">XP Checker</a><br/>
                         <a href="/quickplay.html">Quick Play Map Checker</a>
+                        <a href="/serverstatus.html">Bonk.io Server Status</a>
                     </div>
                 </span>
                 <a href="https://discord.gg/RadQ7xx" id="discordlink" target="_blank"><i class="fab fa-discord"></i></a>
