--- a/_includes/top.html
+++ b/_includes/top.html
@@ -28,6 +28,7 @@
 
         <meta name="google-site-verification" content="FEijvMGwCNkxbshW2jR9aTTYvpJFDkejSXJRR7cPfpQ" />
         <meta name="msvalidate.01" content="D8571762A86E4870190A09991372AD65" />
+        <meta name="wot-verification" content="e03a7921f283c7275f03"/>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112446948-1"></script>
