changed testimonial, avatar images now hosted locally, better font for browsers that aren't chrome

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -16,7 +16,7 @@
         <meta name="theme-color" content="#013e79">
 
         <link rel="icon" type="image/png" href="/static/img/logo.png">
-        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#26'>
+        <link rel='stylesheet' type='text/css' href='/static/css/{{ page.styleToUse }}.css#27'>
 
         {% if page.sel == 'skins' %}
         <link rel='stylesheet' type='text/css' href='/static/css/jquery-ui.min.css'>
@@ -69,7 +69,7 @@
                 <span id="more">More &#9660;
                     <div class="moredd">
                         <a href="/xpchecker.html">XP Checker</a><br/>
-                        <a href="/quickplay.html">Quick Play Map Checker</a>
+                        <a href="/quickplay.html">Quick Play Map Checker</a><br/>
                         <a href="/serverstatus.html">Bonk.io Server Status</a>
                     </div>
                 </span>
