--- a/static/css/skinstyle.css
+++ b/static/css/skinstyle.css
@@ -12,7 +12,7 @@ header{
     text-align:center;
     color:#fb016e;
     padding:30px 0;
-    font-family:'VT323', monospace;
+    font-family:'VT323', 'Consolas', monospace;
     user-select: none;
     padding-bottom:40px;
     z-index:999;
@@ -45,7 +45,7 @@ header h1{
     font-size:40px;
     font-weight:normal;
     margin:0;
-    font-family:'VT323', monospace;
+    font-family:'VT323', 'Consolas', monospace;
 }
 #defaulta{
     color:inherit;
@@ -95,7 +95,7 @@ nav .sel{
 }
 section{
     color:#ccc;
-    font-family:monospace;
+    font-family:'Consolas', monospace;
     text-align:center;
     font-size:18px;
     padding:0 20px;
@@ -111,7 +111,7 @@ section a, #cusa{
     display:inline-block;
     font-size:28px;
     padding:4px 10px;
-    font-family:'VT323', monospace;
+    font-family:'VT323', 'Consolas', monospace;
     text-transform:uppercase;
 }
 ul{
@@ -128,7 +128,7 @@ ul li{
     text-decoration:none;
     color:#111;
     padding:15px 30px;
-    font-family:'VT323', monospace;
+    font-family:'VT323', 'Consolas', monospace;
     text-transform:uppercase;
     margin-left:10px;
     display:inline-block;
@@ -169,7 +169,7 @@ input[type=text],input[type=password]{
     text-decoration:none;
     color:#111;
     padding:5px 10px;
-    font-family:'VT323', monospace;
+    font-family:'VT323', 'Consolas', monospace;
     margin-left:5px;
     display:inline-block;
     box-shadow:5px 5px 0px 0px #777;
@@ -182,7 +182,7 @@ input[type=text],input[type=password]{
 .skinslot{
     display:inline-block;
     color:#111;
-    font-family:'VT323', monospace;
+    font-family:'VT323', 'Consolas', monospace;
     min-width:75px;
     height:75px;
     margin:0px 10px;
@@ -346,7 +346,7 @@ hr{
 }
 #adbnote{
     display:none;
-    font-family:'VT323', monospace;
+    font-family:'VT323', 'Consolas', monospace;
     color:#fb016e;
     max-width:400px;
     margin:0 auto;
