updated downtime lastoutage variable

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -32,9 +32,10 @@
         {% if page.sel == 'skins' %}
         <script src="/static/js/jquery-ui.min.js"></script>
         <script src="/static/js/md5.js"></script>
+        <script src="/static/js/jscolor.min.js"></script>
         <script src="/static/js/skineditor.js#20"></script>
         {% endif %}
-        <script src="/static/js/{{ page.scriptToUse }}.js#28"></script>
+        <script src="/static/js/{{ page.scriptToUse }}.js#29"></script>
         <script src="/static/js/remodal.js"></script>
         <script>
             setTimeout(function(){
