WE'RE BACK BABYYYYYYYYYYYYYY!!!!!!!!!!!!!

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -77,4 +77,7 @@
             </nav>
         </header>
         <section>
+            <!-- emergency notice 
                 <span style="position:absolute;top:0;left:0;width:100%;background:red;color:#111;"><b>Important: </b>we are currently having (hopefully temporary) server issues with Bonk Leagues CORS-enabled requests, meaning the Skin Manager, XP checker, etc. is DOWN.<br/>We will keep you updated in the Bonk Leagues Discord server.</span>
+            -->
+            <span style="position:absolute;top:0;left:0;width:100%;color:rgb(132, 187, 60);"><b>Servers are back! </b>Our servers are back for now, they may be a little slower than usual. Sorry for the long downtime! (it wasn't our fault) &macr;\_(ツ)_/&macr;</span>
